fix text wrapping

--- a/client/styles/orders.less
+++ b/client/styles/orders.less
@@ -1,10 +1,6 @@
 @import "variables";
 @import "mixins";
 
-.newlines {
-	white-space: pre;
-}
-
 .two-columns {
 	width: 100%;
 	position: absolute;
